--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- creating  info -->
     <div class="info">
         <div class="info1">
-            <img src="/images/LOBO.png" alt="kirana">
+            <img src="LOBO.png" alt="kirana">
         </div>
         <br>
         <br>
@@ -244,5 +244,6 @@
     <script src="script.js"></script>
 
 </body>
+
 
 </html>
