Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- creating  info -->
     <div class="info">
         <div class="info1">
-            <img src="LOBO.png" alt="kirana">
+            <img src="/LOBO.png" alt="kirana">
         </div>
         <br>
         <br>
@@ -247,3 +247,4 @@
 
 
 </html>
+
