--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- creating  info -->
     <div class="info">
         <div class="info1">
-            <img src="/images/LOBO.png" alt="kirana">
+            <img src="./images/LOBO.png" alt="kirana">
         </div>
         <br>
         <br>
@@ -247,5 +247,6 @@
 
 
 </html>
+
 
 
