--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <h1><a href="#">MamtaEngineering</a></h1>
       </li>
       <li class="hideOnMobile">
-        <h3><a href="index.html">Home</a></h3>
+        <h3><a href="./index.html">Home</a></h3>
       </li>
       <li class="hideOnMobile">
-        <h3><a href="Services.html">Services</a></h3>
+        <h3><a href="./Services.html">Services</a></h3>
       </li>
        <li class="hideOnMobile">
         <h3><a href="#footer">Contact</a></h3>
       </li> 
       <li class="hideOnMobile">
-        <h3><a href="about.html">About </a></h3>
+        <h3><a href="./about.html">About </a></h3>
       </li>
       <li class="menu-button" onclick=showSidebar()><a href="#"><i class="fa-solid fa-bars"></i></a></li>
     </ul>
@@ -39,14 +39,14 @@
     <ul>
       <li onclick=hideSidebar()><a href="#"><i class="fa-solid fa-xmark"></i></a></li>
       <li>
-        <h3><a href="index.html">Home</a></h3>
+        <h3><a href="./index.html">Home</a></h3>
       </li>
       <li>
-        <h3><a href="Services.html">services</a></h3>
+        <h3><a href="./Services.html">services</a></h3>
       </li>
       <!-- <li><h3><a href="#">Contact</a></h3></li> -->
       <li>
-        <h3><a href="about.html">About </a></h3>
+        <h3><a href="./about.html">About </a></h3>
       </li>
       <li>
         <h3><a href="#footer">contact</a></h3>
@@ -247,6 +247,7 @@
 
 
 </html>
+
 
 
 
