Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h3><a href="./index.html">Home</a></h3>
       </li>
       <li class="hideOnMobile">
-        <h3><a href="./Services.html">Services</a></h3>
+        <h3><a href="./services.html">Services</a></h3>
       </li>
        <li class="hideOnMobile">
         <h3><a href="#footer">Contact</a></h3>
@@ -42,7 +42,7 @@
         <h3><a href="./index.html">Home</a></h3>
       </li>
       <li>
-        <h3><a href="./Services.html">services</a></h3>
+        <h3><a href="./services.html">services</a></h3>
       </li>
       <!-- <li><h3><a href="#">Contact</a></h3></li> -->
       <li>
@@ -247,6 +247,7 @@
 
 
 </html>
+
 
 
 
