--- a/about.html
+++ b/about.html
@@ -19,16 +19,16 @@
         <h1><a href="#">MamtaEngineering</a></h1>
       </li>
       <li class="hideOnMobile">
-        <h3><a href="index.html">Home</a></h3>
+        <h3><a href="./index.html">Home</a></h3>
       </li>
       <li class="hideOnMobile">
-        <h3><a href="Services.html">services</a></h3>
+        <h3><a href="./services.html">services</a></h3>
       </li>
        <li class="hideOnMobile">
         <h3><a href="#footer">Contact</a></h3>
       </li> 
       <li class="hideOnMobile">
-        <h3><a href="about.html">About </a></h3>
+        <h3><a href="./about.html">About </a></h3>
       </li>
       <li class="menu-button" onclick=showSidebar()><a href="#"><i class="fa-solid fa-bars"></i></a></li>
     </ul>
@@ -40,10 +40,10 @@
     <ul>
       <li onclick=hideSidebar()><a href="#"><i class="fa-solid fa-xmark"></i></a></li>
       <li>
-        <h3><a href="index.html">Home</a></h3>
+        <h3><a href="./index.html">Home</a></h3>
       </li>
       <li>
-        <h3><a href="Services.html">services</a></h3>
+        <h3><a href="./services.html">services</a></h3>
       </li>
       <!-- <li><h3><a href="#">Contact</a></h3></li> -->
       <li>
@@ -115,34 +115,34 @@
     <br>
     <div class="gallery">
         <div class="gallery1">
-            <img src="/images/img2.avif" alt="img2" width="100%" height="100%">
+            <img src="./images/img2.avif" alt="img2" width="100%" height="100%">
         </div>
         <div class="gallery1">
-            <img src="/images/my1.avif" alt="img2" width="100%" height="100%">
+            <img src="./images/my1.avif" alt="img2" width="100%" height="100%">
 
         </div>
         <div class="gallery1">
-            <img src="/images/my3.avif" alt="img2" width="100%" height="100%">
+            <img src="./images/my3.avif" alt="img2" width="100%" height="100%">
 
         </div>
         <div class="gallery1">
-            <img src="/images/my4.avif" alt="img2" width="100%" height="100%">
+            <img src="./images/my4.avif" alt="img2" width="100%" height="100%">
 
         </div>
         <div class="gallery1">
-            <img src="/images/my5.avif" alt="img2" width="100%" height="100%">
+            <img src="./images/my5.avif" alt="img2" width="100%" height="100%">
 
         </div>
         <div class="gallery1">
-            <img src="/images/my6.avif" alt="img2" width="100%" height="100%">
+            <img src="./images/my6.avif" alt="img2" width="100%" height="100%">
 
         </div>
         <div class="gallery1">
-            <img src="/images/my7.avif" alt="img2" width="100%" height="100%">
+            <img src="./images/my7.avif" alt="img2" width="100%" height="100%">
 
         </div>
         <div class="gallery1">
-            <img src="/images/my9.avif" alt="img2" width="100%" height="100%">
+            <img src="./images/my9.avif" alt="img2" width="100%" height="100%">
         </div>
     </div>
 
@@ -207,5 +207,6 @@
 </div>
 
 </body>
+
 
 </html>
