--- a/about.html
+++ b/about.html
@@ -156,7 +156,7 @@
 <div class="card">
     <div class="card1">
 
-        <img src="/images/uncle.avif"alt="uncle"width="100%"height="100%">
+        <img src="./images/uncle.avif" alt="uncle"width="100%"height="100%">
 <br>
         <div class="card2">
 
@@ -210,3 +210,4 @@
 
 
 </html>
+
