--- a/services.html
+++ b/services.html
@@ -17,16 +17,16 @@
         <h1><a href="#">MamtaEngineering</a></h1>
       </li>
       <li class="hideOnMobile">
-        <h3><a href="index.html">Home</a></h3>
+        <h3><a href="./index.html">Home</a></h3>
       </li>
       <li class="hideOnMobile">
-        <h3><a href="Services.html">Services</a></h3>
+        <h3><a href="./services.html">Services</a></h3>
       </li>
        <li class="hideOnMobile">
         <h3><a href="#footer">Contact</a></h3>
       </li> 
       <li class="hideOnMobile">
-        <h3><a href="about.html">About </a></h3>
+        <h3><a href="./about.html">About </a></h3>
       </li>
       <li class="menu-button" onclick=showSidebar()><a href="#"><i class="fa-solid fa-bars"></i></a></li>
     </ul>
@@ -38,14 +38,14 @@
     <ul>
       <li onclick=hideSidebar()><a href="#"><i class="fa-solid fa-xmark"></i></a></li>
       <li>
-        <h3><a href="index.html">Home</a></h3>
+        <h3><a href="./index.html">Home</a></h3>
       </li>
       <li>
-        <h3><a href="Services.html">services</a></h3>
+        <h3><a href="./services.html">services</a></h3>
       </li>
       <!-- <li><h3><a href="#">Contact</a></h3></li> -->
       <li>
-        <h3><a href="about.html">About </a></h3>
+        <h3><a href="./about.html">About </a></h3>
       </li>
       <li>
         <h3><a href="#footer">contact</a></h3>
@@ -159,7 +159,7 @@
   <div class="menu">
     <div class="menu1">
       <div class="menu-a">
-                <video src="/videos/video1.mp4"width="100%" height="500px"controls></video>  
+                <video src="./videos/video1.mp4"width="100%" height="500px"controls></video>  
 
         <!-- <img src="/images/img2.avif"alt="neah"width="100%"height="100%"> -->
       </div>
@@ -200,34 +200,34 @@
 
  <div class="gallery">
         <div class="gallery1">
-            <img src="/images/my3.avif" alt="img2" width="100%" height="100%">
+            <img src="./images/my3.avif" alt="img2" width="100%" height="100%">
         </div>
         <div class="gallery1">
-            <img src="/images/ucle3.avif" alt="img2" width="100%" height="100%">
+            <img src="./images/ucle3.avif" alt="img2" width="100%" height="100%">
 
         </div>
         <div class="gallery1">
-            <img src="/images/building.avif" alt="img2" width="100%" height="100%">
+            <img src="./images/building.avif" alt="img2" width="100%" height="100%">
 
         </div>
         <div class="gallery1">
-            <img src="/images/my10.avif" alt="img2" width="100%" height="100%">
+            <img src="./images/my10.avif" alt="img2" width="100%" height="100%">
 
         </div>
         <div class="gallery1">
-            <img src="/images/my9.avif" alt="img2" width="100%" height="100%">
+            <img src="./images/my9.avif" alt="img2" width="100%" height="100%">
 
         </div>
         <div class="gallery1">
-            <img src="/images/my8.avif" alt="img2" width="100%" height="100%">
+            <img src="./images/my8.avif" alt="img2" width="100%" height="100%">
 
         </div>
         <div class="gallery1">
-            <img src="/images/my6.avif" alt="img2" width="100%" height="100%">
+            <img src="./images/my6.avif" alt="img2" width="100%" height="100%">
 
         </div>
         <div class="gallery1">
-            <img src="/images/imgs.avif" alt="img2" width="100%" height="100%">
+            <img src="./images/imgs.avif" alt="img2" width="100%" height="100%">
         </div>
     </div>
 
@@ -268,4 +268,5 @@
 </div>
 
 </body>
+
 </html>
